syntax = "proto3";

package auth;

option go_package = "protobuf/auth;auth";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc MasterPassword(MasterPasswordRequest) returns (MasterPasswordResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc SendData(SendDataRequest) returns (SendDataResponse);
  rpc ReceiveData(ReceiveDataRequest) returns (stream ReceiveDataResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 userID = 1;
  string token = 2;
  string refreshToken = 3;
}

message MasterPasswordRequest {
  string masterPassword = 2;
}

message MasterPasswordResponse {
  bool success = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  string token = 1;
  string refreshToken = 2;
}

enum DataType {
  LOGIN_PASSWORD = 0;
  TEXT_NOTE = 1;
  BINARY_DATA = 2;
  BANK_CARD = 3;
}

// message Data {
//   DataType dataType = 1;
//   oneof data {
//     LoginPassword loginPassword = 2;
//     TextNote textNote = 3;
//     BinaryData binaryData = 4;
//     BankCard bankCard = 5;
//   }
// }

message DataToPass {
  int64 DBID = 1;
  DataType dataType = 2;
  string stringData = 3;
}

// message LoginPassword {
//   string title = 1;
//   string login = 2;
//   string password = 3;
// }

// message TextNote {
//   string title = 1;
//   string text = 2;
// }

// message BinaryData {
//   string title = 1;
//   bytes data = 2;
// }

// message BankCard {
//   string title = 1;
//   string cardNumber = 2;
//   string cardHolder = 3;
//   string cvv = 4;
//   string expiryDate = 5;
// }

message SendDataRequest {
  DataToPass data = 1;
}

message SendDataResponse {
  bool success = 1;
}

message ReceiveDataRequest {
  DataType dataType = 1;
}

message ReceiveDataResponse {
  DataToPass data = 1;
}